--- a/.nova/Configuration.json
+++ b/.nova/Configuration.json
@@ -1,5 +1,5 @@
 {
-  "workspace.name" : "maxvoltar.photo",
+  "workspace.name" : "scotts.camera",
   "workspace.preview_type" : "custom",
   "workspace.preview_url" : "http:\/\/127.0.0.1:4000\/"
 }
